# voice-recognition-youtube

./: .envrc.sample  .gitignore  Cargo.toml  README.md  setup-whisper.sh  setup.sh
recognition-from-link/: Cargo.toml
recognition-from-link/examples/: read_line.rs
recognition-from-link/src/: all.rs  download.rs  ffmpeg.rs  lib.rs  main.rs  recognize.rs  search.rs  vosk.rs  whisper.rs  youtube.rs
voice-recognition-vosk/: Cargo.toml  build.rs
voice-recognition-vosk/examples/: read_wav.rs
voice-recognition-vosk/src/: lib.rs  main.rs
whisper-recognizer/: Cargo.toml
whisper-recognizer/examples/: recognize.rs
whisper-recognizer/src/: lib.rs
youtube-downloader/: Cargo.toml
youtube-downloader/examples/: search.rs  youtube_dl.rs
youtube-downloader/src/: lib.rs
