[package]
name = "recognition-from-link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
youtube-downloader = { version = "0.1.0", path = "../youtube-downloader" }
