[package]
name = "recognition-from-link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
csv = "1.2.1"
hound = "3.5.0"
log = "0.4.17"
tokio = { version = "1.26.0", features = ["full"] }
voice-recognition-vosk = { version = "0.1.0", path = "../voice-recognition-vosk" }
whisper-recognizer = { version = "0.1.0", path = "../whisper-recognizer" }
youtube-downloader = { version = "0.1.0", path = "../youtube-downloader" }
